--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
